@@ -2,6 +2,9 @@
     0.3.1
         * anonymine_engine.py (hiscores, game_engine (play_game)):
             Added highscores for lost games.
+        * anonymine_fields.py (generic_field (_call)): Check that won games
+            really are won, any defect will automatically turn
+            'win' into 'lose'.
 
 2016-08-16      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.0
